add post for create task, add swagg docs for post route
